Risolto errore link

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </div>
                 <div class="row featurette">
                     <div class="col-sm-5 hidden-xs">
-                        <img class="featurette-image img-responsive" src="img/GlasTravelsLOGO.png" alt="Logo azienda">
+                        <img class="featurette-image img-responsive" src="img/GlasTravelsLOGO.png" alt="Logo Glas Travels">
                     </div>
                     <div class="col-sm-7">
                         <h4 class="featurette-heading"><em id="logo_featurette">Glas Travels </em> <span class="text-muted">Chi siamo.</span></h4>
