--- a/sicurezza.html
+++ b/sicurezza.html
@@ -69,8 +69,8 @@
                         <a href="#sottomenu" class="list-group-item" data-toggle="collapse"><i class="md md-work"></i> Lavora con Noi</a>
                         <div class="collapse" id="sottomenu">
                             <a href="lavori_stagionali.html" class="list-group-item"><i class="fa fa-briefcase"></i> Lavori stagionali</a>
-                            <a href="studenti.html" class="list-group-item"><i class="fa fa-briefcase"></i> Studenti</a>
-                            <a href="stage.html" class="list-group-item"><i class="fa fa-briefcase"></i> Opportunità di stage</a>
+                            <a href="lavori_stagionali.html#studenti" class="list-group-item"><i class="fa fa-briefcase"></i> Studenti</a>
+                            <a href="lavori_stagionali.html#stage" class="list-group-item"><i class="fa fa-briefcase"></i> Opportunità di stage</a>
                         </div>
                     </div>
 
