Icone navbar Azienda

--- a/lavori_stagionali.html
+++ b/lavori_stagionali.html
@@ -61,7 +61,7 @@
                     <!-- SIDE MENU -->
 
                     <div class="list-group">
-                        <a href="chi_siamo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo aziendale</a>
+                        <a href="chi_siamo.html" class="list-group-item"><i class="fa fa-user"></i>&nbsp; Profilo aziendale</a>
                         <a href="business.html" class="list-group-item"><i class="fa fa-line-chart"></i> Business</a>
                         <a href="tos.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
                         <a href="sicurezza.html" class="list-group-item"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
@@ -167,7 +167,6 @@
 
             });
         </script>
-
     </div>
 </body>
 
