--- a/navbar.html
+++ b/navbar.html
@@ -50,17 +50,17 @@
 
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Azienda<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="/chi_siamo.html">Profilo aziendale</a>
+                        <li><a href="/chi_siamo.html"><i class="fa fa-user"></i>&nbsp;&nbsp; Profilo aziendale</a>
                         </li>
-                        <li><a href="/business.html">Business</a>
+                        <li><a href="/business.html"><i class="fa fa-line-chart"></i>&nbsp; Business</a>
                         </li>
-                        <li><a href="/tos.html">Termini e Condizioni</a>
+                        <li><a href="/tos.html"><i class="md md-info-outline"></i>&nbsp; Termini e Condizioni</a>
                         </li>
-                        <li><a href="/sicurezza.html">Sicurezza &amp; Privacy</a>
+                        <li><a href="/sicurezza.html"><i class="md md-vpn-lock"></i>&nbsp; Sicurezza &amp; Privacy</a>
                         </li>
-                        <li><a href="/contatti.html">Contattaci</a>
+                        <li><a href="/contatti.html"><i class="md md-email"></i>&nbsp; Contattaci</a>
                         </li>
-                        <li><a href="/lavori_stagionali.html">Lavora con Noi</a>
+                        <li><a href="/lavori_stagionali.html"><i class="md md-work"></i>&nbsp; Lavora con Noi</a>
                         </li>
                     </ul>
                 </li>
