--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <!-- MapGlyphs -->
     <link href="mapglyphs/mapglyphs.css" rel="stylesheet">
 
+    <!-- Material Design iconic font -->
+    <link href="material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
+
     <!-- Flexslider  -->
     <link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
     <script src="flexslider/jquery.flexslider.js"></script>
