Aggiunto collegamento alla registrazione nel login

--- a/navbar.html
+++ b/navbar.html
@@ -94,6 +94,9 @@
                                 <a class="btn btn-success btn-block" href="/profilo.html">Accedi</a>
                                 <a class="btn btn-primary btn-block" href="/profilo.html"><span class="fa fa-facebook" style="width: 15px;"></span> Accedi con Facebook
                                 </a>
+                                <hr/>
+                                <p class="text-center" style="margin-top: 0px; margin-bottom: 0px;">Non sei registrato? <a href="registrazione.html">Clicca qui!</a>
+                                </p>
                             </form>
                         </li>
                     </ul>
