Migliorie profilo e registrazione
piccole modifiche alle pagine profilo e registrazione per migliorare il
posizionamento dell'immagine personale

--- a/profilo.html
+++ b/profilo.html
@@ -94,13 +94,14 @@
                             <div class="clearfix"></div>
                         </div>
 
-                        <div class="panel-body">
-                            <img src="img/user-profile-picture-placeholder.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
+                        <div class="panel-body" align="middle">
+                            <img src="img/user-profile-picture-placeholder.jpg" class="purchase-item-thumbnail"/><br><br>
+                            <button class="btn btn-default">Modifica</button><br><br>
 
                             <div class="purchase-item-details">
                                 <table class="table">
                                     <tr>
-                                        <td>Name</td>
+                                        <td>Nome</td>
                                         <td>Pinco</td>
                                     </tr>
                                     <tr>
@@ -177,6 +178,16 @@
                                     </td>
                                     <td>
                                         <button class="btn btn-default">Scollega</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <i class="fa fa-twitter" style="height: 25px"></i>
+                                    </td>
+                                    <td>
+                                        <button class="btn btn-default">Collega account</button>
+                                    </td>
+                                    <td>
                                     </td>
                                 </tr>
                             </table>
