--- a/registrazione.html
+++ b/registrazione.html
@@ -80,7 +80,7 @@
                         </div>
 
                         <div class="panel-body" align="middle">
-                            <img src="img/user-profile-picture-placeholder.jpg" class="purchase-item-thumbnail-register"/><br><br>
+                            <img src="img/user-profile-picture-placeholder.jpg" class="purchase-item-thumbnail"/><br><br>
                             <button class="btn btn-default">Carica</button><br><br>
 
                             <div class="purchase-item-details">
