Aggiornate pagine acquisti, aquisto-viaggio, carrelo, profilo, recensioni, ricerca

--- a/acquisti.html
+++ b/acquisti.html
@@ -94,11 +94,11 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/maldive550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="img/maldive550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
                                 <p>2 adulti - 1 bambino</p>
-                                <p>Totale: EUR 2100,00 - VISA</p>
+                                <p>Totale: EUR 2.100,00 - VISA</p>
                                 <p>Transazione # 404-2941210-6149129</p>
                                 <p>Effettuata il: 22-04-2014</p>
                                 <hr/>
@@ -124,11 +124,11 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/alaska550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="img/alaska550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
                                 <p>2 adulti</p>
-                                <p>Totale: EUR 1600,00 - VISA</p>
+                                <p>Totale: EUR 1.600,00 - VISA</p>
                                 <p>Transazione # 404-2941210-0056455</p>
                                 <p>Effettuata il: 13-08-2010</p>
                                 <hr/>
