--- a/acquisto-viaggio.html
+++ b/acquisto-viaggio.html
@@ -51,7 +51,8 @@
                         <li><a href="index.html">Home</a>
                         </li>
                         <li>Area Personale</li>
-                        <li class="active">Le mie recensioni</li>
+                        <li>Carrello</li>
+                        <li class="active">Completa acquisto</li>
                     </ol>
                 </div>
             </div>
@@ -60,69 +61,17 @@
 
             <div class="row">
 
-                <div class="col-md-3">
-
-                    <!-- SIDE MENU -->
-
-                    <div class="list-group">
-                        <span class="list-group-item list-group-item-default">Area personale</span>
-                        <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
-                        <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="recensioni.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
-                        <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
-                    </div>
-
-                </div>
-
                 <!-- SECTION CONTENT -->
 
-                <div class="col-md-9">
+                <div class="col-lg-12">
 
-                    <!-- MALDIVE -->
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="pull-left">
-                                <h4>Maldive</h4>
-                            </div>
-                            <div class="header-center">
-                            </div>
-                            <div class="pull-right">
-                                <h4>30-07-2014</h4>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="panel-body">
-                            <img src="img/maldive550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
-
-                            <div class="purchase-item-details">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                <hr style="margin-bottom: 5px;" />
-                                <div>
-                                    <img class="review-upload-thumnb" src="img/maldive_mocked_upload_1.png" />
-                                    <img class="review-upload-thumnb" src="img/maldive_mocked_upload_2.png" />
-                                    <img class="review-upload-thumnb" src="img/maldive_mocked_upload_3.png" />
-                                    <img class="review-upload-thumnb" src="img/maldive_mocked_upload_4.png" />
-                                    <p class="help-block">Fai click su una foto per rimuoverla</p>
-                                </div>
-                                <hr />
-                                <div>
-                                    <button type="button" class="btn btn-default">Carica foto</button>
-                                    <button type="button" class="btn btn-default">Modifica</button>
-                                    <button type="button" class="btn btn-default">Rimuovi</button>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <!-- ALASKA -->
+                    <!-- AUSTRALIA -->
 
                     <div class="panel panel-default">
+
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <h4>Alaska</h4>
+                                <h4>Conferma il pagamento</h4>
                             </div>
                             <div class="header-center">
                             </div>
@@ -130,46 +79,159 @@
                             </div>
                             <div class="clearfix"></div>
                         </div>
-                        <div class="panel-body">
-                            <img src="img/alaska550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
 
-                            <div class="purchase-item-details">
-                                <form>
-                                    <div class="form-group">
-                                        <textarea class="form-control" rows="6" placeholder="Com'è stata la tua vacanza?"></textarea>
-                                    </div>
-                                    <div>
-                                        <button type="button" class="btn btn-default">Carica foto</button>
-                                        <button type="button" class="btn btn-default">Pubblica</button>
-                                    </div>
-                                </form>
+                        <div class="panel-body">
+
+                            <div class="panel-body" style="padding: 0">
+                                <img src="img/australia550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+
+                                <div class="purchase-item-details">
+                                    <p>Australia</p>
+                                    <p>Dal 06/08/2015 al 25/08/2015</p>
+                                    <p>2 adulti</p>
+                                    <p>2 bambini</p>
+                                    <p>0 escursioni</p>
+                                    <p><strong>Totale EUR 2.100,00</strong>
+                                    </p>
+                                </div>
                             </div>
+
+                            <hr style="margin-left: 0; margin-right: 0;" />
+
+                            <div class="panel-body" style="padding: 0">
+                                <img src="img/parigi2194x2194.jpg " alt="immagine di copertina del viaggio " class="purchase-item-thumbnail fixed hidden-xs " />
+
+                                <div class="purchase-item-details">
+                                    <p>Parigi</p>
+                                    <p>Dal 30/08/2015 al 06/09/2015</p>
+                                    <p>2 adulti</p>
+                                    <p>0 escursioni</p>
+                                    <p><strong>Totale EUR 1.200,00</strong>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <hr style="margin-top: 2px; margin-bottom: 2px; border-color: #DEDEDE;" />
+
+                        <div class="panel-body">
+                            <p>Eventuali documenti/biglietti verranno recapitati presso:</p>
+                            <div>
+                                <p>Pinco Pallino</p>
+                                <p>Via Le Mani Dal Culo, 0</p>
+                                <p>Trepalle, Sondrio 23030</p>
+                                <p>Italia</p>
+                                <p>Telefono: 3406175005</p>
+                            </div>
+                        </div>
+
+                        <hr style="margin-top: 2px; margin-bottom: 2px; border-color: #DEDEDE;" />
+
+
+                        <div class="panel-body">
+                            <p>Il pagamento verrà effettuato tramite:</p>
+                            <div>
+                                <p>Postepay ************1769</p>
+                                <p>Scadenza 07/2019</p>
+                                <p>Intestata a Pinco Pallino</p>
+                            </div>
+                        </div>
+
+                        <hr style="margin-top: 2px; margin-bottom: 2px; border-color: #DEDEDE;" />
+
+                        <div class="panel-body">
+
+                            <p class="text-right">
+                                Codice sconto
+                                <input type="text" value="THDKVM5U" style="text-align: right;">
+                            </p>
+
+                            <table class="table ">
+                                <tr>
+                                    <td>
+                                        <p>Viaggi</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-right ">EUR 3.300,00</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p>Biglietti</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-right ">EUR 280,00</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p>Spedizione</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-right ">EUR 7,00</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p>Sconti</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-right ">EUR 61,00</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p>Codici</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-right ">EUR 0,00</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p><strong>Totale</strong>
+                                        </p>
+                                    </td>
+                                    <td>
+                                        <p class="text-right "><strong>EUR 3.526,00</strong>
+                                        </p>
+                                    </td>
+                                </tr>
+                            </table>
+
+                        </div>
+
+                        <hr style="margin-top: 2px; margin-bottom: 2px; border-color: #DEDEDE;" />
+
+                        <div class="panel-body">
+                            <p class="text-right ">
+                                <a class="btn btn-warning ">Conferma pagamento</a>
+                            </p>
 
                         </div>
                     </div>
-
                 </div>
-
             </div>
         </div>
 
         <!-- FOOTER -->
 
-        <div id="footer"></div>
+        <div id="footer "></div>
 
     </div>
 
     <!-- Bootstrap Javascript Core-->
 
-    <script src="js/bootstrap.min.js"></script>
-    <!-- <script src="js/docs.min.js"></script> -->
+    <script src="js/bootstrap.min.js "></script>
+    <!-- <script src="js/docs.min.js "></script> -->
+
     <!-- scripts parts -->
 
     <script>
-        $("#navbar").load("navbar.html");
+        $("#navbar ").load("navbar.html ");
     </script>
     <script>
-        $("#footer").load("footer.html");
+        $("#footer ").load("footer.html ");
     </script>
 
 </body>
