--- a/profilo.html
+++ b/profilo.html
@@ -95,8 +95,10 @@
                         </div>
 
                         <div class="panel-body" align="middle">
-                            <img src="img/user-profile-picture-placeholder.jpg" class="purchase-item-thumbnail"/><br><br>
-                            <button class="btn btn-default">Modifica</button><br><br>
+                            <img src="img/user-profile-picture-placeholder.jpg" class="user-profile-image" alt="Immagine personale" />
+                            <p>
+                                <button class="btn btn-default">Cambia immagine</button>
+                            </p>
 
                             <div class="purchase-item-details">
                                 <table class="table">
@@ -145,7 +147,7 @@
                                         <td>3406175005</td>
                                     </tr>
                                 </table>
-                                <button class="btn btn-default">Modifica</button>
+                                <button class="btn btn-default">Modifica informazioni</button>
                             </div>
 
                         </div>
@@ -177,7 +179,7 @@
                                         <p>pallino.pinco@facebook.com</p>
                                     </td>
                                     <td>
-                                        <button class="btn btn-default">Scollega</button>
+                                        <button class="btn btn-default">Scollega account</button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -185,9 +187,9 @@
                                         <i class="fa fa-twitter" style="height: 25px"></i>
                                     </td>
                                     <td>
-                                        <button class="btn btn-default">Collega account</button>
                                     </td>
                                     <td>
+                                        <button class="btn btn-default">Collega account</button>
                                     </td>
                                 </tr>
                             </table>
