--- a/ricerca.html
+++ b/ricerca.html
@@ -86,7 +86,7 @@
             <div id="search-results">
 
                 <div class="row col-lg-12 search-result">
-                    <img class="purchase-item-thumbnail fixed hidden-xs" src="img/alaska550x550.jpg">
+                    <img class="purchase-item-thumbnail fixed hidden-xs" alt="Immagine di copertina del viaggio" src="img/alaska550x550.jpg">
                     <div class="purchase-item-details">
                         <a href="#"><h4>Viaggi - Alaska</h4></a>
                         <p>... il viaggio può essere arricchito con numerose
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="row col-lg-12 search-result">
-                    <img class="purchase-item-thumbnail fixed hidden-xs" src="img/frozen-deer-200x200.png">
+                    <img class="purchase-item-thumbnail fixed hidden-xs" alt="Immagine di copertina della recensione" src="img/frozen-deer-200x200.png">
                     <div class="purchase-item-details">
                         <a href="#"><h4>Recensioni - Alaska</h4></a>
                         <p>... io e la mia famiglia abbiamo partecipato a quasi tutte le
@@ -104,7 +104,7 @@
                 </div>
 
                 <div class="row col-lg-12 search-result">
-                    <img class="purchase-item-thumbnail fixed hidden-xs" src="img/egitto-200x200.jpg">
+                    <img class="purchase-item-thumbnail fixed hidden-xs" alt="Immagine di copertina dell'offerta" src="img/egitto-200x200.jpg">
                     <div class="purchase-item-details">
                         <a href="#"><h4>Offerte - Egitto</h4></a>
                         <p>... e se prenoti 2
