--- a/carrello.html
+++ b/carrello.html
@@ -99,11 +99,11 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/australia550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="img/australia550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
                                 <p>2 adulti - 2 bambini</p>
-                                <p>Totale: EUR 3400,00
+                                <p>Totale: EUR 3.400,00
                                 </p>
                                 <hr/>
                                 <button type="button" class="btn btn-default">Modifica</button>
@@ -130,7 +130,7 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/parigi2194x2194.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="img/parigi2194x2194.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
                                 <div class="alert alert-warning" role="alert">
@@ -139,7 +139,7 @@
                                 </div>
                                 <hr/>
                                 <p>2 adulti</p>
-                                <p>Totale: EUR 1700,00</p>
+                                <p>Totale: EUR 1.700,00</p>
                                 <hr/>
                                 <button type="button" class="btn btn-default">Modifica</button>
                                 <button type="button" class="btn btn-default">Acquista</button>
@@ -165,7 +165,7 @@
                         </div>
                         <div class="panel-body">
                             <p>2 Viaggi</p>
-                            <p>Totale: EUR 5100,00</p>
+                            <p>Totale: EUR 5.100,00</p>
                             <hr/>
 
                             <button type="button" class="btn btn-default pull-right">Acquista tutto</button>
