--- a/recensioni.html
+++ b/recensioni.html
@@ -94,16 +94,16 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/maldive550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="img/maldive550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                 <hr style="margin-bottom: 5px;" />
                                 <div>
-                                    <img class="review-upload-thumnb" src="img/maldive_mocked_upload_1.png" />
-                                    <img class="review-upload-thumnb" src="img/maldive_mocked_upload_2.png" />
-                                    <img class="review-upload-thumnb" src="img/maldive_mocked_upload_3.png" />
-                                    <img class="review-upload-thumnb" src="img/maldive_mocked_upload_4.png" />
+                                    <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_1.png" />
+                                    <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_2.png" />
+                                    <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_3.png" />
+                                    <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_4.png" />
                                     <p class="help-block">Fai click su una foto per rimuoverla</p>
                                 </div>
                                 <hr />
@@ -131,7 +131,7 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/alaska550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="img/alaska550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
                                 <form>
