--- a/viaggi/acquisto-viaggio.html
+++ b/viaggi/acquisto-viaggio.html
@@ -15,20 +15,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Main CSS -->
-    <link href="css/main.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
 
     <!-- FontAwesome -->
-    <link href="fontawesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="fontawesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/fontawesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- MapGlyphs -->
-    <link href="mapglyphs/mapglyphs.css" rel="stylesheet">
+    <link href="/mapglyphs/mapglyphs.css" rel="stylesheet">
 
     <!-- Material Design iconic font -->
-    <link href="material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
+    <link href="/material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
 
 </head>
 
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ol class="breadcrumb" id="path">
-                        <li><a href="index.html">Home</a>
+                        <li><a href="/index.html">Home</a>
                         </li>
                         <li>Area Personale</li>
                         <li>Carrello</li>
@@ -83,7 +83,7 @@
                         <div class="panel-body">
 
                             <div class="panel-body" style="padding: 0">
-                                <img src="img/australia550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+                                <img src="/img/australia550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                                 <div class="purchase-item-details">
                                     <p>Australia</p>
@@ -99,7 +99,7 @@
                             <hr style="margin-left: 0; margin-right: 0;" />
 
                             <div class="panel-body" style="padding: 0">
-                                <img src="img/parigi2194x2194.jpg " alt="immagine di copertina del viaggio " class="purchase-item-thumbnail fixed hidden-xs " />
+                                <img src="/img/parigi2194x2194.jpg " alt="immagine di copertina del viaggio " class="purchase-item-thumbnail fixed hidden-xs " />
 
                                 <div class="purchase-item-details">
                                     <p>Parigi</p>
@@ -205,7 +205,7 @@
 
                         <div class="panel-body">
                             <p class="text-right ">
-                                <a class="btn btn-warning ">Conferma pagamento</a>
+                                <a class="btn btn-warning " href="/acquisti.html" role="button">Conferma pagamento</a>
                             </p>
 
                         </div>
@@ -222,16 +222,16 @@
 
     <!-- Bootstrap Javascript Core-->
 
-    <script src="js/bootstrap.min.js "></script>
+    <script src="/js/bootstrap.min.js "></script>
     <!-- <script src="js/docs.min.js "></script> -->
 
     <!-- scripts parts -->
 
     <script>
-        $("#navbar ").load("navbar.html ");
+        $("#navbar ").load("/navbar.html ");
     </script>
     <script>
-        $("#footer ").load("footer.html ");
+        $("#footer ").load("/footer.html ");
     </script>
 
 </body>
