--- a/index.html
+++ b/index.html
@@ -63,40 +63,40 @@
                         <img src="img/tokyo2000x550.jpg" alt="immagine Tokyo" />
                         <div class="slide_text">
                             <div class="slide_title">Tokyo</div>
-                            <div class="slide_byline">Promozione 3000€ per 2.
-                            </div>
+                            <div class="slide_byline">Promozione 3000€ per 2.</div>
+                            <a class="btn btn-default slider-button" href="/viaggi/asia/tokyo.html" role="button">Offerta</a>
                         </div>
                     </li>
                     <li>
                         <img src="img/egitto2000x550.jpg" alt="immagine Egitto" />
                         <div class="slide_text">
                             <div class="slide_title">Egitto</div>
-                            <div class="slide_byline">Sulle dune del Sahara entro Dicembre 2015.
-                            </div>
+                            <div class="slide_byline">Le grandi Piramidi d'Egitto.</div>
+                            <a class="btn btn-default slider-button" href="/viaggi/africa/egitto.html" role="button">Offerta</a>
                         </div>
                     </li>
                     <li>
                         <img src="img/isole-fiji2000x550.jpg" alt="immagine Isole Fiji" />
                         <div class="slide_text">
                             <div class="slide_title">Isole Fiji</div>
-                            <div class="slide_byline">Super offerta fino al 10 giugno 2015!
-                            </div>
+                            <div class="slide_byline">Super offerta fino al 10 giugno 2015!</div>
+                            <a class="btn btn-default slider-button" href="/viaggi/oceania/isole-fiji.html" role="button">Offerta</a>
                         </div>
                     </li>
                     <li>
                         <img src="img/las-vegas2000x550.jpg" alt="immagine Las Vegas" />
                         <div class="slide_text">
                             <div class="slide_title">Las Vegas</div>
-                            <div class="slide_byline">La meta più richiesta di sempre!
-                            </div>
+                            <div class="slide_byline">La meta più richiesta di sempre!</div>
+                            <a class="btn btn-default slider-button" href="/viaggi/america/las-vegas.html" role="button">Offerta</a>
                         </div>
                     </li>
                     <li>
                         <img src="img/parigi2000x550(luca).jpg" alt="immagine Parigi" />
                         <div class="slide_text">
                             <div class="slide_title">Parigi</div>
-                            <div class="slide_byline">Visita la famosa capitale francese! Promozione valida per novelli sposi.
-                            </div>
+                            <div class="slide_byline">Viaggio romantico per novelli sposi.</div>
+                            <a class="btn btn-default slider-button" href="/viaggi/europa/parigi.html" role="button">Offerta</a>
                         </div>
                     </li>
                 </ul>
