--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="img/parigi2000x550(luca).jpg" alt="immagine Parigi" />
+                        <img src="img/parigi2000x550.jpg" alt="immagine Parigi" />
                         <div class="slide_text">
                             <div class="slide_title">Parigi</div>
                             <div class="slide_byline">Viaggio romantico per novelli sposi.</div>
