--- a/viaggi/acquisto-viaggio.html
+++ b/viaggi/acquisto-viaggio.html
@@ -83,23 +83,7 @@
                         <div class="panel-body">
 
                             <div class="panel-body" style="padding: 0">
-                                <img src="/img/australia550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
-
-                                <div class="purchase-item-details">
-                                    <p>Australia</p>
-                                    <p>Dal 06/08/2015 al 25/08/2015</p>
-                                    <p>2 adulti</p>
-                                    <p>2 bambini</p>
-                                    <p>0 escursioni</p>
-                                    <p><strong>Totale EUR 2.100,00</strong>
-                                    </p>
-                                </div>
-                            </div>
-
-                            <hr style="margin-left: 0; margin-right: 0;" />
-
-                            <div class="panel-body" style="padding: 0">
-                                <img src="/img/parigi2194x2194.jpg " alt="immagine di copertina del viaggio " class="purchase-item-thumbnail fixed hidden-xs " />
+                                <img src="/img/parigi550x550.jpg " alt="immagine di copertina del viaggio " class="purchase-item-thumbnail fixed hidden-xs " />
 
                                 <div class="purchase-item-details">
                                     <p>Parigi</p>
@@ -205,7 +189,7 @@
 
                         <div class="panel-body">
                             <p class="text-right ">
-                                <a class="btn btn-warning " href="/acquisti.html" role="button">Conferma pagamento</a>
+                                <a class="btn btn-warning " href="/acquisti_conparigi.html" role="button">Conferma pagamento</a>
                             </p>
 
                         </div>
