--- a/acquisti_conparigi.html
+++ b/acquisti_conparigi.html
@@ -79,6 +79,43 @@
 
                 <div class="col-md-9">
 
+                    <!-- PARIGI -->
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <div class="pull-left">
+                                <h4>Parigi</h4>
+                            </div>
+                            <div class="header-center">
+                            </div>
+                            <div class="pull-right">
+                                <h4>dal 11-07-2015 al 21-07-2015</h4>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <img src="img/parigi550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+
+                            <div class="purchase-item-details">
+                                <p>2 adulti</p>
+                                <p>Totale: EUR 1.700,00 - VISA</p>
+                                <p>Transazione # 404-2941210-0056455</p>
+                                <p>Effettuata il:
+                                                    <script language="Javascript">
+                                                    <!--
+                                                      today = new Date()
+                                                      document.write(today.getDate(),"-",today.getMonth()+1,"-",today.getFullYear());
+                                                    //  -->
+                                                    </script>
+                                </p>
+                                <hr/>
+                                <a class="btn btn-default" href="#" role="button">Scarica fattura</a>
+                                <a class="btn btn-default" href="/recensioni_conparigi.html" role="button">Scrivi una recensione</a>
+                            </div>
+
+                        </div>
+                    </div>
+
                     <!-- MALDIVE -->
 
                     <div class="panel panel-default">
