--- a/carrello.html
+++ b/carrello.html
@@ -83,37 +83,7 @@
                         <i class="fa fa-info-circle"></i>
                         <span class="sr-only">Error:</span> L'inserimento nel carrello non corrisponde ad una prenotazione!
                     </div>
-
-                    <!-- AUSTRALIA -->
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="pull-left">
-                                <h4>Australia</h4>
-                            </div>
-                            <div class="header-center">
-                            </div>
-                            <div class="pull-right">
-                                <h4>dal 11-07-2015 al 21-07-2015</h4>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="panel-body">
-                            <img src="img/australia550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
-
-                            <div class="purchase-item-details">
-                                <p>2 adulti - 2 bambini</p>
-                                <p>Totale: EUR 3.400,00
-                                </p>
-                                <hr/>
-                                <button type="button" class="btn btn-default">Modifica</button>
-                                <button type="button" class="btn btn-default">Acquista</button>
-                                <button type="button" class="btn btn-default">Rimuovi</button>
-                                <button type="button" class="btn btn-default">Salva per dopo</button>
-                            </div>
-
-                        </div>
-                    </div>
+                    
 
                     <!-- PARIGI -->
 
@@ -130,7 +100,7 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/parigi2194x2194.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="img/parigi550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
                                 <div class="alert alert-warning" role="alert">
@@ -141,10 +111,41 @@
                                 <p>2 adulti</p>
                                 <p>Totale: EUR 1.700,00</p>
                                 <hr/>
-                                <button type="button" class="btn btn-default">Modifica</button>
-                                <button type="button" class="btn btn-default">Acquista</button>
-                                <button type="button" class="btn btn-default">Rimuovi</button>
-                                <button type="button" class="btn btn-default">Salva per dopo</button>
+                                <a class="btn btn-default" href="/viaggi/acquisto-viaggio.html" role="button">Modifica</a>
+                                <a class="btn btn-default" href="/acquisti_conparigi.html" role="button">Acquista</a>
+                                <a class="btn btn-default" href="/carrello_noparigi.html" role="button">Rimuovi</a>
+                                <a class="btn btn-default" href="#" role="button">Salva per dopo</a>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <!-- ISOLE FIJI -->
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <div class="pull-left">
+                                <h4>Isole Fiji</h4>
+                            </div>
+                            <div class="header-center">
+                            </div>
+                            <div class="pull-right">
+                                <h4>dal 11-07-2015 al 21-07-2015</h4>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <img src="img/isolefiji550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+
+                            <div class="purchase-item-details">
+                                <p>2 adulti - 2 bambini</p>
+                                <p>Totale: EUR 3.400,00
+                                </p>
+                                <hr/>
+                                <a class="btn btn-default" href="#" role="button">Modifica</a>
+                                <a class="btn btn-default" href="#" role="button">Acquista</a>
+                                <a class="btn btn-default" href="#" role="button">Rimuovi</a>
+                                <a class="btn btn-default" href="#" role="button">Salva per dopo</a>
                             </div>
 
                         </div>
@@ -168,7 +169,7 @@
                             <p>Totale: EUR 5.100,00</p>
                             <hr/>
 
-                            <button type="button" class="btn btn-default pull-right">Acquista tutto</button>
+                            <a class="btn btn-warning pull-right" href="/carrello_vuoto.html" role="button">Svuota carrello</a>
                         </div>
                     </div>
 
