--- a/carrello_vuoto.html
+++ b/carrello_vuoto.html
@@ -51,7 +51,7 @@
                         <li><a href="index.html">Home</a>
                         </li>
                         <li>Area Personale</li>
-                        <li class="active">I miei acquisti</li>
+                        <li class="active">Carrello</li>
                     </ol>
                 </div>
             </div>
@@ -67,8 +67,8 @@
                     <div class="list-group">
                         <span class="list-group-item list-group-item-default">Area personale</span>
                         <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
-                        <a href="acquisti.html" class="list-group-item active"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="carrello.html" class="list-group-item active"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
+                        <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
                         <a href="recensioni.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
                         <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
@@ -79,34 +79,9 @@
 
                 <div class="col-md-9">
 
-                    <!-- MALDIVE -->
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="pull-left">
-                                <h4>Maldive</h4>
-                            </div>
-                            <div class="header-center">
-                            </div>
-                            <div class="pull-right">
-                                <h4>dal 11-07-2014 al 21-07-2014</h4>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="panel-body">
-                            <img src="img/maldive550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
-
-                            <div class="purchase-item-details">
-                                <p>2 adulti - 1 bambino</p>
-                                <p>Totale: EUR 2.100,00 - MASTERCARD</p>
-                                <p>Transazione # 404-2941210-6149129</p>
-                                <p>Effettuata il: 22-4-2014</p>
-                                <hr/>
-                                <a class="btn btn-default" href="#" role="button">Scarica fattura</a>
-                                <a class="btn btn-default" href="#" role="button">Modifica recensione</a>
-                            </div>
-
-                        </div>
+                    <div class="alert alert-info" role="alert">
+                        <i class="fa fa-info-circle"></i>
+                        <span class="sr-only">Error:</span> Non ci sono prenotazioni!
                     </div>
 
                 </div>
@@ -124,6 +99,7 @@
 
     <script src="js/bootstrap.min.js"></script>
     <!-- <script src="js/docs.min.js"></script> -->
+
     <!-- scripts parts -->
 
     <script>
