--- a/recensioni_conparigi.html
+++ b/recensioni_conparigi.html
@@ -78,6 +78,38 @@
                 <!-- SECTION CONTENT -->
 
                 <div class="col-md-9">
+
+
+                    <!-- PARIGI -->
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <div class="pull-left">
+                                <h4>Parigi</h4>
+                            </div>
+                            <div class="header-center">
+                            </div>
+                            <div class="pull-right">
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <img src="img/parigi550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+
+                            <div class="purchase-item-details">
+                                <form>
+                                    <div class="form-group">
+                                        <textarea class="form-control" rows="6" placeholder="Com'è stata la tua vacanza?"></textarea>
+                                    </div>
+                                    <div>
+                                <a class="btn btn-default" href="#" role="button">Carica foto</a>
+                                <a class="btn btn-default" href="/recensioni_conparigiaggiunta.html" role="button">Pubblica</a>
+                                    </div>
+                                </form>
+                            </div>
+
+                        </div>
+                    </div>
                     
                     <!-- MALDIVE -->
 
