--- a/recensioni_conparigiaggiunta.html
+++ b/recensioni_conparigiaggiunta.html
@@ -78,6 +78,36 @@
                 <!-- SECTION CONTENT -->
 
                 <div class="col-md-9">
+
+
+                    <!-- PARIGI -->
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <div class="pull-left">
+                                <h4>Parigi</h4>
+                            </div>
+                            <div class="header-center">
+                            </div>
+                            <div class="pull-right">
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <img src="img/parigi550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+
+                            <div class="purchase-item-details">
+                            <div class="purchase-item-details">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <div>
+                                <a class="btn btn-default" href="#" role="button">Carica foto</a>
+                                <a class="btn btn-default" href="/recensioni_conparigi.html" role="button">Modifica</a>
+                                <a class="btn btn-default" href="/recensioni.html" role="button">Rimuovi</a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                     
                     <!-- MALDIVE -->
 
